# kvstore

./: CMakeLists.txt  change.txt
example/: CMakeLists.txt  data_mgr.cc  data_mgr.h  file_io.cc  file_io.h  kv_store.cc  kv_store.h  meta_mgr.cc  meta_mgr.h
src/: CMakeLists.txt  test.c
test/: simple_case.cc
